--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
     </head>
 
     <body>
+
         <nav>
-            <div class="logo">Exploree</div>
+            <div class="logo">Exploree </div>
             <div class="nav-links">
                 <ul>
-                    <li><img href="Image/GitHub.png"></li>
-                    <li><img href="Image/linkedin.png"></li>
-                    <li><img href="Image/facebook.png"></li>
+                    <li><a href="https://github.com/riyajath-ahamed"><img src="Image/GitHub.png" alt=""></a></li>
+                    <li><a href="https://www.linkedin.com/in/ahamed-riyajath-aba59b1b2/"><img src="Image/linkedin.png"></a></li> 
+                    
+                    <li><img src="Image/facebook.png"></li>
                 </ul>
             </div>
         </nav>
+
 
         <section id="sectionone" class="screen">
             <div id="scene">
