--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
 
-                    <!-- //////////      ABOUT ME PAGE      ////////////// -->
+                    <!-- //////////      ABOUT ME      ////////////// -->
                     <div class="swiper-slide">
                         <div class="slide-number">
                             <p><span>About Me</span></p>
@@ -94,13 +94,13 @@
                     </div>
 
 
-                    <!-- //////////      MY WORK PAGE      ////////////// -->
+                    <!-- //////////      Skills      ////////////// -->
                     <div class="swiper-slide">
                         <div class="slide-number">
-                            <p><span>About Me</span></p>
+                            <p><span>Skills</span></p>
                         </div>
                         <div class="slide-text">
-                            <h4><span>01</span></h4>
+                            <h4><span>02</span></h4>
                         </div>
                         <div class="slide-detail">
                             <p>
@@ -126,14 +126,14 @@
                         <div class="slide-img"></div>
                     </div>
 
-                    <!-- //////////      MY WORK PAGE      ////////////// -->
+                    <!-- //////////      Projects      ////////////// -->
 
                     <div class="swiper-slide">
                         <div class="slide-number">
-                            <p><span>About Me</span></p>
+                            <p><span>Projects</span></p>
                         </div>
                         <div class="slide-text">
-                            <h4><span>01</span></h4>
+                            <h4><span>03</span></h4>
                         </div>
                         <div class="slide-detail">
                             <p>
@@ -160,14 +160,14 @@
                     </div>
 
 
-                    <!-- //////////      MY WORK PAGE      ////////////// -->
+                    <!-- //////////     Contact      ////////////// -->
 
                     <div class="swiper-slide">
                         <div class="slide-number">
-                            <p><span>About Me</span></p>
+                            <p><span>Contacts</span></p>
                         </div>
                         <div class="slide-text">
-                            <h4><span>01</span></h4>
+                            <h4><span>04</span></h4>
                         </div>
                         <div class="slide-detail">
                             <p>
