--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             <p><span>Projects</span></p>
                         </div>
                         <div class="slide-text">
-                            <h4><span>03</span></h4>
+                            <h4><span>Projects & Blog</span></h4>
                         </div>
                         <div class="slide-detail">
                             <p>
@@ -180,7 +180,7 @@
                             <p><span>Contacts</span></p>
                         </div>
                         <div class="slide-text">
-                            <h4><span>04</span></h4>
+                            <h4><span>Contacts</span></h4>
                         </div>
                         <div class="slide-detail">
                             <p>
